--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
