--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "bulma": "^0.9.0",
+        "express": "^4.17.1",
+        "firebase": "^7.16.0",
         "luxon": "^1.24.1",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
-        "react-spring": "^8.0.27",
-        "express": "^4.17.1"
+        "react-spring": "^8.0.27"
     },
     "proxy": "http://localhost:5000",
     "scripts": {
         "startall": "node index.js & react-scripts start",
-        "start": "react-scripts start",
+        "start": "node index.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "gcp-build": "npm run build",
+        "deploy": "gcloud app deploy"
     },
     "engines": {
         "node": "12.x"
