Mobile version improvement, firebase sdk fix

--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
         "bulma": "^0.9.0",
         "express": "^4.17.1",
         "firebase": "^7.16.0",
@@ -44,5 +41,12 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@testing-library/react-hooks": "^3.4.1",
+        "react-test-renderer": "^16.13.1"
     }
 }
